--- a/README.tex
+++ b/README.tex
@@ -159,6 +159,7 @@
     \item We agreed on an ordering of the objects to prevent deadlock: the session table must be locked first before the member set is ever locked.
   \end{itemize}
 
-Cheers, 
+Cheers, \\
+\includegraphics{3tlx0s.jpg} \\
 Kevin, Horace, and Sweet
 \end{document}
