turned in version 2

--- a/README.tex
+++ b/README.tex
@@ -30,7 +30,7 @@
 
 \section{To run:}
   \begin{description}
-    \item[On localhost:] Sorry but we only included the Amazon targeted .war file. It should be the same (hopefully), but please ask us if you need the localhost one specifically. You can probably download the .git commit file that's timestamped. Afterwards, simply deploy the .war file into the tomcat7 webapps directory. To allow access from outside sources:
+    \item[On localhost:] Sorry but we only included the Amazon optimized .war file. It should be the same (hopefully), but please ask us if you need the localhost one specifically. You can probably download the .git commit file that's timestamped. Afterwards, simply deploy the .war file into the tomcat7 webapps directory. To allow access from outside sources:
       \begin{itemize}
         \item Bypass the firewall for port 8080 TCP
         \item For the server UDP port that is opened (You can determine this by going to http://localhost:8080/mumble and you'll see a a line ``This server's IPP port: IPxxx\_portNumber'', the 5-digit portNumber is the one you want), also bypass the firewall for this portNumber for UDP communications. Note that this may need to change everytime the app is started.
